# inf2-material

./: CMakeLists.txt
src/examples/greet/: greeting.cpp  greeting.h  main.cpp
src/lecture/: CMakeLists.txt
src/lecture/test_1/: CMakeLists.txt  rechteck.cpp  rechteck.h
